# bigO

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
bigO/: __init__.py  bigO.py  graph.py  models.py
test/: bubble_sort.py  exercise_timespace.py  facts.py
timespace/: custom_alloc.c  graph.py  timespace.py
